<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/svScroller"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/llhMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".SettingsActivity">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#2196F3">

            <TableRow
                android:id="@+id/trAbout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:background="#FFFFFF"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/about_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnAbout"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/about"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:id="@+id/trSetGH"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:background="#FFFFFF"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvSetGH"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/set_text"
                            android:textSize="12sp" />

                        <TableLayout
                            android:id="@+id/tblSetGH"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="#3F51B5">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="1dp"
                                android:layout_marginBottom="1dp">

                                <TextView
                                    android:id="@+id/textView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:background="#FFF383"
                                    android:text="@string/gh_value"
                                    android:textColor="#6666CC"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="1dp"
                                    android:layout_weight="1"
                                    android:background="#FFF383"
                                    android:gravity="center_horizontal"
                                    android:text="@string/date_text"
                                    android:textColor="#6666CC"
                                    android:textSize="12sp" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#FFFFFF">

                                <EditText
                                    android:id="@+id/etGH"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:gravity="center_horizontal|center_vertical"
                                    android:inputType="numberDecimal"
                                    android:text="@string/_10_3"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                                <TextView
                                    android:id="@+id/tvDateGH"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="4"
                                    android:gravity="center_horizontal|center_vertical"
                                    android:inputType="date"
                                    android:text="@string/_12_01_2021"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                                <ImageButton
                                    android:id="@+id/ibtnnDateGH"
                                    style="@android:style/Widget.Holo.Light.ImageButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:layout_marginEnd="4dp"
                                    android:layout_weight="0"
                                    android:contentDescription="@string/date_choosing"
                                    android:paddingStart="2dp"
                                    app:srcCompat="@android:drawable/ic_menu_day" />
                            </TableRow>

                        </TableLayout>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSetGH"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:text="@string/set"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:id="@+id/trSendDB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:background="#FFFFFF"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvSendDB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/send_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnSendDB"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:text="@string/send"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:id="@+id/trLoadDB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:background="#FFFFFF"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvLoadDB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/load_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnLoadDB"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/load"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow
                android:id="@+id/trClearDB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:background="#FFFFFF"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvClearDB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/clear_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnClearDB"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/clear"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:id="@+id/trDonate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:background="#FFFFFF"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvDonate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/donate_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnDonate"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/donate"
                    android:textSize="12sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>