<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".AddOrEditActivity">

    <TextView
        android:id="@+id/tvAddOrEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="#574B8B"
        android:gravity="center"
        android:text="@string/add_or_edit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tvMeasurementDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#6666CC"
        android:text="@string/measurement_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLabelDate"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/tvDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <ImageButton
                android:id="@+id/btnDate"
                style="@android:style/Widget.Holo.Light.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_day" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvBreakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6666CC"
        android:text="@string/breakfast_glucose_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBeforeBreakfast"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/before"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/etBeforeBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tvAfterBreakfast"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/after"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/etAfterBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvLunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6666CC"
        android:text="@string/lunch_glucose_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBeforeLunch"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/before"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/etBeforeLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tvAfterLunch"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/after"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/etAfterLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvDinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6666CC"
        android:text="@string/dinner_glucose_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvBeforeDinner"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/before"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/etBeforeDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tvAfterDinner"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/after"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/etAfterDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>

    </TableLayout>

</LinearLayout>