<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llhBrowser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CDCDCD"
    tools:layout_editor_absoluteX="5dp">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="0"
        android:background="#E6E6E6"
        android:gravity="center"
        android:text="@string/_12_01_2021"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="2"
        android:background="#D2D2D2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvBefore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="#FFF0F0F0"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/before"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvBBft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:gravity="center"
                android:text="@string/_10_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/tvBLun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFF0F0F0"
                android:gravity="center"
                android:text="@string/_10_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/tvBDin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:gravity="center"
                android:text="@string/_10_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#DCDCDC">

            <TextView
                android:id="@+id/tvAfter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="#DCDCDC"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/after"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvABft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFF0F0F0"
                android:gravity="center"
                android:text="@string/_10_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/tvALun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#DCDCDC"
                android:gravity="center"
                android:text="@string/_10_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/tvADin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFF0F0F0"
                android:gravity="center"
                android:text="@string/_10_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvAverage"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="0"
        android:background="#E6E6E6"
        android:gravity="center"
        android:text="@string/_10_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

</LinearLayout>
